cambio backend y response del mismo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.auto-index-creation= true
 uri.stocker.backend.pedido=http://localhost:3000/pedido/
 endpoint.stocker.tracking=/getPedido/{idPedido}
+
+uri.stocker.stocker.store.id.venta=http://localhost:3010/venta/api/
