--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-server.port=9100
+server.port=8080
+#server.port=9100
 server.servlet.context-path=/api
-logging.level.org.springframework=DEBUG
+#logging.level.org.springframework=DEBUG
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.data.mongodb.database=stocker_tracking
 spring.data.mongodb.port=27017
 spring.data.mongodb.auto-index-creation= true
 uri.stocker.backend.pedido=http://localhost:3000/pedido/
-endpoint.stocker.tracking=/getPedido/{idPedido}
+endpoint.stocker.tracking=/getPedido
+logging.level.org.springframework.boot.autoconfigure=ERROR
+
 
 uri.stocker.stocker.store.id.venta=http://localhost:3010/venta/api/
