fix: se resuelven fixes encontrados, se genera un modelo que espera una lista de productos, la guarda en bbdd y la devuelve al usuario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ logging.level.org.springframework.boot.autoconfigure=ERROR
 
 
 uri.stocker.stocker.store.id.venta=http://localhost:3010/venta/api/
-uri.stocker.stocker.store.id.cliente=http://localhost:3010/cliente/api/
+uri.stocker.stocker.store.id.cliente=http://localhost:3010/venta/api/
